Renombrar carpeta tarjetas-vaerá a tarjetas_variadas para evitar problemas con acentos en URLs

--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,9 @@
 !flashcards/**
 !flashcards/
 
-# Don't ignore tarjetas-vaerá files
-!tarjetas-vaerá/**
-!tarjetas-vaerá/
+# Don't ignore tarjetas_variadas files
+!tarjetas_variadas/**
+!tarjetas_variadas/
 
 # Don't ignore directories (so we can traverse them)
 !*/
