feat(dia_biblico): agregar imágenes del día bíblico y actualizar contador del slideshow
Se agregaron 14 imágenes PNG para el slideshow del día bíblico y se actualizó el contador de "1 / 15" a "1 / 14" en index.html. También se modificó .gitignore para no ignorar la carpeta dia_biblico.

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@
 !vaera/**
 !vaera/
 
+# Don't ignore dia_biblico files
+!dia_biblico/**
+!dia_biblico/
+
 # Don't ignore directories (so we can traverse them)
 !*/
 
