--- a/.gitignore
+++ b/.gitignore
@@ -41,12 +41,12 @@
 !parejas/
 
 # Don't ignore bo files
-!bo/**
-!bo/
+!antitesis/**
+!antitesis/
 
 # Don't ignore beshalaj files
-!beshalaj/**
-!beshalaj/
+!cuestionarios/**
+!cuestionarios/
 
 # Don't ignore directories (so we can traverse them)
 !*/
