Agrega el subproyecto 'calendario' al index principal y revisa subproyectos para reflejar nuevos archivos.

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,10 @@
 !cuestionarios/**
 !cuestionarios/
 
+# Don't ignore beshalaj files
+!calendario/**
+!calendario/
+
 # Don't ignore directories (so we can traverse them)
 !*/
 
