Actualización de archivos en gh-pages, incluyendo version.json y otros cambios recientes.

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,11 @@
 !calendario/**
 !calendario/
 
+!gh-pages/**
+!gh-pages/
+!release/**
+!release/
+
 # Don't ignore directories (so we can traverse them)
 !*/
 
